# info2602-fastapi-l4

./: .gitignore  README.md  pyproject.toml
app/: auth.py  cli.py  main.py  models.py
app/routers/: __init__.py  auth.py  category.py  todo.py
